# generator-receiver

./: .gitignore  CMakeLists.txt  README.md
build-receiverUI-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  receiverUI
build-receiverUI-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-6ba6fe5e5dc37660dcdd.json  codemodel-v2-1cbc433d9ec72b2e54b1.json  directory-.-Debug-c280574a635c051f36c9.json  index-2024-11-24T18-02-53-0968.json  target-receiverUI-Debug-85fe7c61f90f048916d1.json  target-receiverUI_autogen-Debug-f0ebcd7a05e3fe94e60d.json
build-receiverUI-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-93a5059681520e16c936.json  cmakeFiles-v1-526194c9497cab908b89.json  codemodel-v2-4ea178ee9af48c48e44a.json  directory-.-Debug-40c414bea10e4b2dd13b.json  index-2024-11-24T17-58-11-0079.json  target-receiverUI-Debug-b7a86fe826ba7b53bcee.json
build-receiverUI-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-receiverUI-Desktop-Debug/receiverUI_autogen/: moc_predefs.h  mocs_compilation.cpp
build-receiverUI-Desktop-Debug/receiverUI_autogen/EWIEGA46WW/: moc_receiverui.cpp  moc_receiverui.cpp.d  moc_socketReader.cpp  moc_socketReader.cpp.d
build-receiverUI-Desktop-Debug/receiverUI_autogen/include/: ui_receiverui.h
generator/: CMakeLists.txt
generator/inc/: connection.h  generator.h  generatorSql.h  main.h
generator/src/: connection.cpp  generator.cpp  generatorSql.cpp  main.cpp
receiver/: CMakeLists.txt
receiver/inc/: main.h  matrix.h  reader.h  sql.h
receiver/src/: main.cpp  reader.cpp  sql.cpp
receiverUI/: CMakeLists.txt  main.cpp  receiverui.cpp  receiverui.h  receiverui.ui  socketReader.cpp  socketReader.h  sql.cpp  sql.h  utils.cpp  utils.h
utils/: CMakeLists.txt
utils/src/: utils.cpp
